plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	id 'java'
}

group = 'com.auth'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2021.0.4")
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

	// Gson
	implementation 'com.google.code.gson:gson'

	// MapStruct & Lombok (최신 버전으로 업데이트)
	implementation "org.mapstruct:mapstruct:1.5.3.Final"
	implementation "org.projectlombok:lombok:1.18.28"
	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	// Lombok 및 MapStruct annotationProcessor
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
	annotationProcessor "org.projectlombok:lombok:1.18.28"

	// Spring Data, Validation, Security
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT (JJWT)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// Spring Cloud Config Server (Config 서버가 필요한 경우 추가)
	implementation 'org.springframework.cloud:spring-cloud-config-server'

	// Spring Cloud Config
	implementation "org.springframework.cloud:spring-cloud-starter-config"

	// Spring Boot Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// Spring Data Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Database - H2 (개발용)
	runtimeOnly 'com.h2database:h2'

	// Database - MySQL (운영용)
	implementation 'mysql:mysql-connector-java:8.0.32'

	// ModelMapper
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'

	// Test 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

// Lombok 모듈 문제 해결을 위한 추가 설정
tasks.withType(JavaCompile) {
	options.fork = true
	options.forkOptions.jvmArgs << '--add-opens' << 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
}
